Ensure Byline sections are inline-block to avoid wrapping

--- a/sass/molecules/_byline.scss
+++ b/sass/molecules/_byline.scss
@@ -27,6 +27,7 @@
 }
 
 .byline__section {
+	@include inline-block;
     margin-left: 1em;
 }
 
